/*
Copyright IBM Corp. 2016 All Rights Reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

option go_package = "github.com/inklabsfoundation/inkchain/protos/ledger/transet";
option java_package = "org.inkchain.inkchain.protos.ledger.transet";

package transet;

message Version {
    uint64 block_num = 1;
    uint64 tx_num = 2;
}

message TranSet {
    string from = 1;
    Version from_ver = 2;
    bytes transet = 3;
}